added a create function

--- a/views/bookmarks/create.erb
+++ b/views/bookmarks/create.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Create New Bookmark:
-  <form action='/index' method='post'>
+  <form action='/bookmarks' method='post'>
   <label for="url">Enter website URL:</label><input type="text" name="url" id="url">
   <input type="submit" value="submit">
   </form>
