--- a/views/bookmarks/create.erb
+++ b/views/bookmarks/create.erb
@@ -10,6 +10,7 @@
   <h1>Create New Bookmark:
   <form action='/bookmarks' method='post'>
   <label for="url">Enter website URL:</label><input type="text" name="url" id="url">
+  <label for="title">Enter website title:</label><input type="text" name="title" id="title">
   <input type="submit" value="submit">
   </form>
 </body>
